--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,6 +1,13 @@
+
 development:
   sessions:
     default:
-      database: mongoid
+      database: lettersmashr_dev
+      hosts:
+        - localhost:27017
+test:
+  sessions:
+    default:
+      database: lettersmashr_test
       hosts:
         - localhost:27017
