Added mongo, resque in-prog

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 RACK_ENV=development
 REDISTOGO_URL=redis://localhost:6379/
+MONGOHQ_URL: mongodb://<user>:<pass>@hatch.mongohq.com:10034/app003132345
 FLICKR_APP_KEY={{ insert your flickr api key }}
 FLICKR_SHARED_SECRET={{ insert your flickr shared secret }}
 FLICKR_TOKEN={{ insert your flickr token after logging in }}
