--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -5,3 +5,10 @@ production:
       options:
         skip_version_check: true
         safe: true
+development:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOHQ_URL'] %>
+      options:
+        skip_version_check: true
+        safe: true
