--- a/config/resque_schedule.yml
+++ b/config/resque_schedule.yml
@@ -1,5 +1,5 @@
 import:
-  cron: 0 */3 * * *
+  cron: 0 0 * * *
   class: Import
   args:
-  description: Run an import every 3hrs
+  description: Run an import every night
