Letters now have self. methods, more testing

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -12,3 +12,10 @@ development:
       options:
         skip_version_check: true
         safe: true
+test:
+  sessions:
+    default:
+      uri: <%= ENV['MONGOHQ_URL'] %>
+      options:
+        skip_version_check: true
+        safe: true
